Revision history for HTML::Scrape


NEXT
========================================
[FIXES]
Aad spaces to text scraping that includes <br> or <hr>.


v0.2.0      Fri Jun 30 14:58:08 CDT 2023
========================================
[ENHANCEMENTS]
Added scrape_id() function for scraping a single ID.


v0.1.0      Thu Jun 29 14:59:04 CDT 2023
========================================
Very first version. Functions may change in name and arguments.