@@ -3,8 +3,14 @@ Revision history for HTML::Scrape
 
 NEXT
 ========================================
+[ENHANCEMENTS]
+The new $HTML::Scrape::WARNINGS variable lets you suppress warnings in
+the scraper.
+
 [FIXES]
 Aad spaces to text scraping that includes <br> or <hr>.
+
+Handle empty tags with IDs.
 
 
 v0.2.0      Fri Jun 30 14:58:08 CDT 2023
